--- a/web/assets/css/renterProfileSearchDetailsRequest_style.css
+++ b/web/assets/css/renterProfileSearchDetailsRequest_style.css
@@ -1,8 +1,7 @@
 /*
-    File: hostProfile_style.css
-    Description: Cascading style sheet for "Manage Properties" page
-    Create: Oct.28,2018
-    Last modified: Nov.23, 2018
+    File: renterProfileSearch_style.css
+    Description: Cascading style sheet for "renterProfileSearch" page
+    Create: Oct.24,2018
     Author: Zhan Shen
     Clients: Michelle Bilek, Farheen Khan
     Course: Software Development Project
@@ -74,7 +73,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 		
-/* --Host Profile header----------------------------------------------------- */
+/* --Search Host Properties header----------------------------------------------------- */
     .subpage {
         padding-top: 120px;
     }
@@ -172,6 +171,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
         position: relative;
         bottom: 0;
         width:100%;
+        top: 185px;
     }
 
         #footer p{
@@ -261,11 +261,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
         box-sizing: border-box;
     }
 
-	   
     
-
-    
-/* --Host: Manage Properties layout--------------------------------------------------------*/
+/* --Renter: Booking Request main content--------------------------------------------------------*/
  .wrapper {
         display: flex;
         flex-flow: row wrap;
@@ -309,14 +306,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
        margin-top: 15px;
        border: 4px solid #ffcc00;
     }
-    
-/*    .my_profile_content {
-        position: relative;
-    }*/
-    
-/*    .my_profile_content h2{
-        font-size:1.3em;
-    }*/
     
     ul#horizontal-list li{
         display: inline-block;
@@ -374,51 +363,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
             border-bottom: none;
         }
         
-/*    .profile_sections {
-        margin-top: 25px;
-    }
-        
-    .profile_sections h4{
-        font-size:.95em;
-        font-weight: bold;
-
-    }*/
-    
-/*    input[type="text"],
-    input[type="tel"],
-    input[type="date"] {
-        height: 25px;
-        margin-top: 8px;
-        width: 230px;
-    }
-    
-    input[type="checkbox"] {
-        margin-top: 25px;
-    }*/
-    
-/*    #checkbox_items li {
-        display: inline-block;
-        font-size:.95em;
-        font-weight: bold;
-        margin-top: 5px;
-    }
-    
-    #checkbox2, #checkbox3 {
-        padding-left: 45px;
-    }
-    
-    .renting_details {
-        margin-top: 38px;
-    }
-        
-    .save_cancel_btn {
-        width: 165px;
-        margin-top: 20px;
-        margin-bottom: 60px;
-    }*/
-        
     h2 {
         margin-top: 9px;
+        font-size:1.3em;
     }
 
     h3 {
@@ -428,67 +375,20 @@ body {font-family: Arial, Helvetica, sans-serif;}
     }
     
     h5 {
-        color: #ffcc00;
-    }
-    
-    h6 {
-        font-size: 14px;
+        color: #333;
+        margin-top: 15px;
+        max-width: 520px;
+        line-height: 25px;
     }
     
     .property-search-content h2 {
         font-size:1.3em;
     }
     
-    .addPropertyBtn {
-        margin-top: 30px;
-        margin-bottom: 220px;
-    }
-    
-    td {
-        border-bottom: 1px solid #ccc;
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
-    
-    td h4{
-        line-height: 25px; 
+    th {
+        padding-top: 10px;
+        padding-right: 80px;
         color: #555;
-        font-size: .9em;
     }
-    
-    input[type="submit"] {
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        -ms-appearance: none;
-        appearance: none;
-        -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-        -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-        -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-        transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-        background-color: #ffffff;
-        border-radius: 0;
-        border: 0;
-        color: #5385c1 !important;
-        cursor: pointer;
-        display: inline-block;
-        font-weight: 600;
-        height: 2.5em;
-        line-height: 1.95em;
-        padding: 0 1.8em;
-        text-align: left;
-        text-decoration: none;
-        white-space: nowrap;
-        width: 24%;
-        border: 1px solid rgba(144, 144, 144, 0.2);
-        margin-top: 12px;
-    }
-    
-    input[type="submit"]:hover{
-        background-color: rgba(144, 144, 144, 0.1);
-    }
-    
-       
 
-            
-        
-        
+    
