--- a/web/assets/css/renterProfileSearch_style.css
+++ b/web/assets/css/renterProfileSearch_style.css
@@ -1,8 +1,7 @@
 /*
-    File: hostProfile_style.css
-    Description: Cascading style sheet for "Manage Properties" page
-    Create: Oct.28,2018
-    Last modified: Nov.23, 2018
+    File: renterProfileSearch_style.css
+    Description: Cascading style sheet for "renterProfileSearch" page
+    Create: Oct.24,2018
     Author: Zhan Shen
     Clients: Michelle Bilek, Farheen Khan
     Course: Software Development Project
@@ -74,7 +73,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 		
-/* --Host Profile header----------------------------------------------------- */
+/* --Search Host Properties header----------------------------------------------------- */
     .subpage {
         padding-top: 120px;
     }
@@ -172,6 +171,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
         position: relative;
         bottom: 0;
         width:100%;
+        top: 150px;
     }
 
         #footer p{
@@ -261,11 +261,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
         box-sizing: border-box;
     }
 
-	   
     
-
-    
-/* --Host: Manage Properties layout--------------------------------------------------------*/
+/* --Renter: Search Host Properties main content--------------------------------------------------------*/
  .wrapper {
         display: flex;
         flex-flow: row wrap;
@@ -309,14 +306,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
        margin-top: 15px;
        border: 4px solid #ffcc00;
     }
-    
-/*    .my_profile_content {
-        position: relative;
-    }*/
-    
-/*    .my_profile_content h2{
-        font-size:1.3em;
-    }*/
     
     ul#horizontal-list li{
         display: inline-block;
@@ -374,49 +363,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
             border-bottom: none;
         }
         
-/*    .profile_sections {
-        margin-top: 25px;
-    }
-        
-    .profile_sections h4{
-        font-size:.95em;
-        font-weight: bold;
-
-    }*/
-    
-/*    input[type="text"],
-    input[type="tel"],
-    input[type="date"] {
-        height: 25px;
-        margin-top: 8px;
-        width: 230px;
-    }
-    
-    input[type="checkbox"] {
-        margin-top: 25px;
-    }*/
-    
-/*    #checkbox_items li {
-        display: inline-block;
-        font-size:.95em;
-        font-weight: bold;
-        margin-top: 5px;
-    }
-    
-    #checkbox2, #checkbox3 {
-        padding-left: 45px;
-    }
-    
-    .renting_details {
-        margin-top: 38px;
-    }
-        
-    .save_cancel_btn {
-        width: 165px;
-        margin-top: 20px;
-        margin-bottom: 60px;
-    }*/
-        
     h2 {
         margin-top: 9px;
     }
@@ -428,20 +374,18 @@ body {font-family: Arial, Helvetica, sans-serif;}
     }
     
     h5 {
-        color: #ffcc00;
-    }
-    
-    h6 {
-        font-size: 14px;
+        font-size:0.9em;
+        color: #555;
     }
     
     .property-search-content h2 {
         font-size:1.3em;
     }
     
-    .addPropertyBtn {
-        margin-top: 30px;
-        margin-bottom: 220px;
+    th {
+        padding-top: 10px;
+        padding-right: 80px;
+        color: #555;
     }
     
     td {
@@ -455,6 +399,27 @@ body {font-family: Arial, Helvetica, sans-serif;}
         color: #555;
         font-size: .9em;
     }
+    
+    #filter {
+        position: relative;
+        top: 60px;
+    }
+    
+    #cityFilter {
+        height: 25px;
+        width: 180px;
+    }
+    
+    #filter {
+            color: #FFF !important;
+            background-color:#5385c1; 
+            height: 2.5em;
+        }
+        
+        #filter:hover {
+            color: #5385c1 !important;
+            background-color: rgba(144, 144, 144, 0.1);
+        }
     
     input[type="submit"] {
         -moz-appearance: none;
@@ -478,7 +443,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
         text-align: left;
         text-decoration: none;
         white-space: nowrap;
-        width: 24%;
+        width: 34%;
         border: 1px solid rgba(144, 144, 144, 0.2);
         margin-top: 12px;
     }
@@ -487,8 +452,3 @@ body {font-family: Arial, Helvetica, sans-serif;}
         background-color: rgba(144, 144, 144, 0.1);
     }
     
-       
-
-            
-        
-        
